cis 2.1/slack/ingress/re-encrypt-tls.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    virtual-server.f5.com/ip: 10.192.75.108
    virtual-server.f5.com/serverssl: /Common/serverssl
    kubernetes.io/ingress.class: "f5"
  name: f5-hello-world
spec:
  backend:
    serviceName: f5-hello-world
    servicePort: 8080
  tls:
  - secretName: test-secret
